oscuro, geolocalizado, varias recomendaciones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Enlace a Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -20,6 +20,16 @@
       <div class="language-switch">
         <button id="es-btn">ES</button>
         <button id="en-btn">EN</button>
+      </div>
+      <div class="options">
+        <label>
+          <input type="radio" name="activity-type" value="individual" checked />
+          <span id="individual-label">Individual</span>
+        </label>
+        <label>
+          <input type="radio" name="activity-type" value="group" />
+          <span id="group-label">Grupal</span>
+        </label>
       </div>
       <input
         type="text"
