--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Actividad Deportiva Recomendada</title>
+    <title>DeporYA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="styles.css" />
